// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayerArea /> Snapshots renders empty player area correctly 1`] = `
<div
  className="player-area right"
>
  <div
    className="player-info"
  >
    someName
    -
    d
  </div>
  <div
    className="card-set"
  >
    <img
      className="card"
      src="2D.svg"
    />
  </div>
</div>
`;

exports[`<PlayerArea /> Snapshots renders player area with cards correctly 1`] = `
<div
  className="player-area bottom"
>
  <div
    className="player-info"
  >
    someName
    -
    d
  </div>
  <div
    className="card-set"
  >
    <img
      className="card"
      src="2D.svg"
    />
  </div>
</div>
`;
